syntax = "proto3";

package org.zjx.service;

service Hello{
    rpc SayHello(HelloRequest) returns(HelloReply){}
}

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string result = 2;
}